@@ -675,6 +675,9 @@ usr/sbin/wake
 ## zdb - ZFS debugg
 usr/sbin/zdb
 
+## hostapd -- authenticator for IEEE 802.11 networks
+usr/sbin/hostapd
+
 ####### contents of /usr/libexec
 # ld-elf.so.1, ld.so, rtld -- run-time link-editor
 libexec/ld-elf.so.1:usr/libexec/ld-elf.so.1
